--- a/styles/simple-calendar.css
+++ b/styles/simple-calendar.css
@@ -6,6 +6,8 @@
   font: 15px/1em inherit;
   color: #545A5C; 
   grid-column: 1 / span 2;
+width: 180%;
+    right: 160px;
   }
   .calendar a {
     text-decoration: none;
@@ -13,15 +15,16 @@
   .calendar header .btn {
     display: inline-block;
     position: absolute;
-    width: 30px;
-    height: 30px;
+    width: 80px;
+    height: 80px;
     text-align: center;
     line-height: 30px;
-    color: #CBD1D2;
+    color: darkgray;
     border-radius: 50%;
-    border: 2px solid #CBD1D2; }
+    border: 2px solid darkgray;
+}
   .calendar header .btn:hover {
-    background: #CBD1D2;
+    background: darkgray;
     color: white; }
   .calendar header .btn:before {
     content: '';
@@ -37,15 +40,23 @@
   .calendar header .btn-prev {
     top: 0;
     left: 0;
-    transform: rotate(-180deg); }
+    transform: rotate(-180deg); 
+}
   .calendar header .btn-next {
     top: 0;
-    right: 0; }
+    right: 50; }
     .calendar header .btn-next:before {
       transform: rotate(45deg); }
+
+.calendar header .btn-next a{
+    font-size: 200;
+}
+
   .calendar header .month {
     padding: 0;
-    margin: 0; }
+    margin: 0;
+    font-size: 40px;
+}
     .calendar header .month .year {
       font-size: 0.9em;
       font-weight: 100; }
@@ -54,7 +65,7 @@
     margin: 20px 0;
     border-spacing: 0px; }
   .calendar thead {
-    font-size: 1.2em;
+    font-size: 40px;
     font-weight: 600; }
   .calendar td {
     padding: .8em .1em; }
@@ -67,7 +78,9 @@
     line-height: 2.5em;
     border-radius: 50%;
     border: 2px solid transparent;
-    cursor: pointer; }
+    cursor: pointer; 
+    font-size: 40px;
+}
     .calendar .day:hover {
       border: 2px solid #6691CC; }
     .calendar .day.today {
